עיצוב עריכת תת קטגוריה

--- a/Client/Components/GeneralPopUpComponent.razor
+++ b/Client/Components/GeneralPopUpComponent.razor
@@ -6,7 +6,8 @@
 
 <div class="overlay">
     <div class="outerPopUp">
-        
+       
+        <div class="outerX" @onclick="undoAction"><img src="../css/images/close x.svg" /></div>
         <h3> @popupTypeTitle</h3>
         <div class="lineBetween"></div>
         <div class="outerText">
