--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -5,7 +5,8 @@
         <NavMenu />
     </div>
 *@
-    <main>  <div class="top-row auth">
+    <main>  
+        <div class="top-row auth">
             <LoginDisplay />
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
