--- a/Client/Components/CategoryComponent.razor.css
+++ b/Client/Components/CategoryComponent.razor.css
@@ -76,14 +76,20 @@
     background-color: #FBFBFB;
     border-radius: 6px;
     width: 88.5vw;
-    max-width: 600px;
+    /* max-width: 600px; */
     /* margin: auto; */
     box-shadow: 0px 2px 2px rgba(39, 53, 160, 0.09), 0px 2px 10px rgba(39, 53, 160, 0.10);
     box-sizing: border-box;
     justify-items: center;
     justify-content: center;
-    align-items: center;
+    column-gap: 3%;
+    row-gap: 5vh;
+    /* height: 100%; */
+    align-content: center;
+    padding-bottom: 7vh;
+    padding-top: 4vh;
 }
+
 
 /* Adjustments for very small devices */
 @media (max-width: 340px) {
