--- a/Client/Components/SubCategoryComponent.razor.css
+++ b/Client/Components/SubCategoryComponent.razor.css
@@ -140,3 +140,77 @@
     margin-bottom: 0.3vh;
     border: 0.2px solid #CBCBCB;
 }
+
+.outerSubCatOverlay {
+    background: #F9F9F9;
+    border-radius: 1.75rem 1.4375rem 0rem 0rem;
+    background-color: #F9F9F9;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 2vh 0 2vh 0;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 3;
+}
+
+.editAndAddSubCat {
+    
+}
+
+
+.closedAndOpenMenu{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-start;
+    column-gap: 1vh;
+    z-index: 2;
+}
+
+.innerSubCatOverlay {
+    width: 88.5vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.modal-close-btn {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
+
+.subCatTitle{
+    font-size:1.3rem;
+}
+
+.catsDropDown {
+    border-radius: 0.1875rem;
+    background: #EDEFF7;
+    padding: 0.6vh;
+    border: none;
+    font-weight: 700;
+    color: #6775F4;
+}
+
+.catsOptions {
+    background-color: #fff;
+    font-size: 0.875rem;
+    color: black;
+}
+
+.catsOptions-selected:after {
+    background-color: #fff;
+    font-size: 0.875rem;
+    color: black;
+}
