--- a/Client/Components/SubCategoryComponent.razor.css
+++ b/Client/Components/SubCategoryComponent.razor.css
@@ -177,6 +177,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    row-gap: 0.8vh;
 }
 
 .modal-close-btn {
@@ -195,22 +196,99 @@
 }
 
 .catsDropDown {
-    border-radius: 0.1875rem;
+    border-radius: 0.02rem;
     background: #EDEFF7;
-    padding: 0.6vh;
+    padding: 0.6vh 0;
     border: none;
     font-weight: 700;
     color: #6775F4;
+    margin-bottom: 1vh;
 }
 
 .catsOptions {
     background-color: #fff;
     font-size: 0.875rem;
     color: black;
+    border: none;
+    border-radius: 0.02rem;
 }
 
-.catsOptions-selected:after {
-    background-color: #fff;
-    font-size: 0.875rem;
-    color: black;
+.catsOptions:checked {
+    background-color: #D6D9F1;
 }
+
+.titleName {
+    font-weight: 500;
+}
+
+.outerTitleName {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1vh;
+}
+
+.titleBox {
+    border-radius: 0.3125rem;
+    background: #FFF;
+    box-shadow: 0px 85px 24px 0px rgba(171, 173, 191, 0.00), 0px 55px 22px 0px rgba(171, 173, 191, 0.01), 0px 31px 18px 0px rgba(171, 173, 191, 0.05), 0px 14px 14px 0px rgba(171, 173, 191, 0.09), 0px 3px 7px 0px rgba(171, 173, 191, 0.10);
+    padding: 1vh;
+    border: none;
+}
+
+.budgetBox {
+    text-align: center;
+    border-radius: 0.25rem;
+    background: #FFF;
+    box-shadow: 0px 85px 24px 0px rgba(171, 173, 191, 0.00), 0px 55px 22px 0px rgba(171, 173, 191, 0.01), 0px 31px 18px 0px rgba(171, 173, 191, 0.05), 0px 14px 14px 0px rgba(171, 173, 191, 0.09), 0px 3px 7px 0px rgba(171, 173, 191, 0.10);
+    border: none;
+    padding: 1.5vh 1vh;
+    font-size: 1.6rem;
+    width: 65%;
+}
+
+.outerBudget {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    padding: 1vh 0;
+    align-items: center;
+    position: relative;
+    flex-direction: column;
+}
+
+.currency-symbol {
+    position: absolute;
+    right: 64vw;
+    pointer-events: none;
+    padding-top: 1.1vh;
+}
+
+.lineBetween {
+    width: 10.542rem;
+    background-color: #EDEFF7;
+    height: 0.2vh;
+    position: relative;
+    bottom: 2vh;
+}
+
+.outerImportance {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.importanceBtns {
+    border-radius: 0.375rem;
+    border: 1px solid #D6D9F1;
+    background: #FFF;
+    display: flex;
+    column-gap: 4vh;
+}
+
+.outerBtns {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 1vh;
+}
+
