תיקון קונטרולר חריגה+ תחילת עבודה על עמוד סטטוס
קונטרולר חריגה עודכן כך שיבדוק חריגה ביחס לסך ההוצאות שנעשו באותו החודש ולא באופן כללי בתת הקטגוריה.

עמוד סטטוס- כרגע מציג את כל הסטטוסים, צריך להוסיף שיכיל את ההתקדמות העדכנית של המשתמש (כרגע עוד לא מעודכן בהתאם).

--- a/Client/Components/AddTransactionComponent.razor
+++ b/Client/Components/AddTransactionComponent.razor
@@ -1502,7 +1502,7 @@
             if (streakDataRes.IsSuccessStatusCode)
             {
                 currentStreak = await streakDataRes.Content.ReadFromJsonAsync<UserStreakData>();
-
+                Console.WriteLine("streak status is -" + currentStreak.AllWeeksValid);
                 if (currentStreak.AllWeeksValid)
                 {
                     string streakStatus = streakStatusCheck(currentStreak.WeeksWithThreeOrMoreTransactions);
